# wingpanel-indicator-dropbox

./: .editorconfig  Application  README.md  meson.build
data/: com.github.isneezy.wingpanel-indicator-dropbox.appdata.xml  com.github.isneezy.wingpanel-indicator-dropbox.desktop
debian/: changelog  control  copyright
icons/: meson.build
src/: Indicator.vala  Indicator.vala~
src/Services/: Dropbox  Dropbox.vala
src/Widgets/: PopoverWidget.vala
